org.eclipse.jdt.ui.tests.refactoring/resources/InlineMethodWorkspace/TestCases/invalid/TestMultiLocal.java
package invalid;

public class TestMultiLocal {
	
	public void foo() {
		int i= /*]*/bar()/*[*/, x;
	}

	public int bar() {
		if (true)
			return 1;
		else
			return 2;
	}
}
